Refactoring and authorship annotation